# rpj

./: .gitignore  .rproj  Cargo.toml  LICENSE  README.md  rpj.rpj
.github/workflows/: release.yml  rust.yml
src/: cli.rs  main.rs
src/commands/: _structure  add.rs  code.rs  debug.rs  explore.rs  export.rs  get.rs  install.rs  list.rs  mod.rs  new.rs  path.rs  remove.rs  run.rs  terminal.rs  update.rs
src/utils/: mod.rs  project.rs  terminal.rs
tests/: cli.rs
