[package]
name = "rpj"
version = "0.9.4"
edition = "2024"
authors = ["JadenLabs <jadenlabssocial@outlook.com>"]
description = "A project management CLI tool for quick manipulation of projects"
license = "MIT"
repository = "https://github.com/jadenlabs/rpj"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "productivity"]

[dependencies]
anstyle = "1.0.11"
assert_cmd = "2.0.17"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
